Set API URL to serveo tunnel

--- a/index.html
+++ b/index.html
@@ -386,7 +386,7 @@
 
 <script>
 const API_URL_FILE = 'https://gist.githubusercontent.com/abigailmini/GIST_ID/raw/mizu-api-url.txt';
-let API_BASE = 'http://localhost:3457'; // fallback
+let API_BASE = 'https://2eb712e0c8f0d213-60-50-218-160.serveousercontent.com'; // serveo tunnel
 
 // State
 let selectedDate = null;
